# matrix

./: CMakeLists.txt  README.md
matrix_lib/: CMakeLists.txt
matrix_lib/include/: matrix.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_matrix.cpp
